--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Texas Texas</title>
+<title>Texas</title>
 <meta name="description" content="Minimal bootstrap 4 Template maelenaged with Markdown. It has all the required ments and features to create a responsive e-learning template for your with amazing experience. "> 
 <meta name="keywords" content="ed tech, e-learning, online learning, education platform, online courses, student management, responsive design, html5, css3, bootstrap">
 <meta name="robots" content="index,follow">
