--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <link rel="manifest" href="/manifest.json">
 <!-- codepot-blog link -->   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto Condensed|Roboto|Roboto Mono|Roboto">
  
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet" media="all">
  
