--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
      <!-- nav items starts here -->
      <div id="navbarNav" class="collapse navbar-collapse justify-content-end">
          <ul class="navbar-nav" itemprop="numberOfItems">
-             <li class="nav-item active" itemprop="item">
+             <li class="nav-item" itemprop="item">
                  <a href="#" title="this is a demo" class="nav-link" itemprop="url">
                      Home
                      <span class="sr-only">
@@ -186,7 +186,7 @@
  
              <div class="d-inline-flex align-items-center">
                  <button class="btn button" itemprop="action">
-                     Sign In
+                    Get A Demo
                  </button>
              </div>
  
@@ -236,7 +236,7 @@
     
             <!-- right side content starts here -->
             <div class="col-md-6 descriptionImage">
-                <img src="https://i.ibb.co/rtJtLyx/Capture.png" alt="image" class="img-fluid" itemprop="image"/>
+                <img src="https://i.ibb.co/vmPtJN1/Capture.png" alt="image" class="img-fluid" itemprop="image"/>
             </div>
             <!-- /right side content ends here -->
     
