--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
     itemtype="http://schema.org/Organization" itemprop="text">
 <!-- footer content starts here -->
     <footer>
-        <div class="footer-wrap">
+        <div class="footer-wrap overflow-hidden">
 
             <!-- first phase starts here -->
             <div class="first_class">
